Fixed bug: Popover overlaps the input if position is "top" Add credits.

--- a/css/flatcolorpicker.css
+++ b/css/flatcolorpicker.css
@@ -17,6 +17,7 @@
 }
 .flatcolorpicker-recent {
   margin-bottom:1px;
+  height:40px
 }
 
 .flatcolorpicker-content {
